# Data_Structures_Practice

./: CMakeLists.txt  README.md  build.sh
Common/include/: common_macros.h  print_utilities.h
Common/src/: print_utilities.c
Graphs/Adjacency_List/: CMakeLists.txt
Graphs/Adjacency_List/include/: PII.h  adjacency_list.h  cli_handling.h  security_functions.h  user_base_map.h
Graphs/Adjacency_List/src/: adjacency_list.c  cli_handling.c  main.c  security_functions.c  user_base_map.c
